fix toolbar alignment
(cherry picked from commit 9e84456e212c7fe5c29181226fc2f2ab9f1c584c)

--- a/calendar/templates/pixelegg/app.less
+++ b/calendar/templates/pixelegg/app.less
@@ -1153,7 +1153,7 @@ div#calendar-container {
 }
 #calendar-toolbar_toolbar {
     .et2_toolbar_more{
-        margin-top: 0.5em;
+       // margin-top: 0.5em;
     }
 	et2-switch .label.on {
 		span.off {
